--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -26,7 +26,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
+ 
       <div class="row row-cols-1 row-cols-md-2 g-4 py-3" >
         <div class="col">
           <div class="card border-0">
@@ -43,7 +43,7 @@
             <div class="card-body">
               <h5 class="card-title">Colegiatura final outselling.</h5>
               <p class="card-text">Habrá Colegiatura final outselling, esta consiste en descuentos, pagos a plazos y está disponible para los alumnos que tengan desde el 10% al 79% de avance curricular. 
-Esto como tal no nos toca pero es importante conocerlo. </p>
+              Esto como tal no nos toca, pero es importante conocerlo. </p>
             </div>
           </div>
         </div>
@@ -53,7 +53,7 @@ Esto como tal no nos toca pero es importante conocerlo. </p>
             <img src="img/Noticias/constanciaaviso.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Constancia de inscripción.</h5>
-              <p class="card-text"> Se aperturó un nuevo accesorio que se llama Constancia de inscripción. Este documento es solo para los de nuevo ingreso y futuros. Solo se refleja la matriculación, fecha de inicio de clases, número de materias y RVOE. El costo es de $500 </p>
+              <p class="card-text">Se apertura un nuevo accesorio que se llama Constancia de inscripción. Este documento es solo para los de nuevo ingreso y futuros. Solo se refleja la matriculación, fecha de inicio de clases, número de materias y RVOE. El costo es de $500 </p>
             </div>
           </div>
         </div>
@@ -80,7 +80,9 @@ Esto como tal no nos toca pero es importante conocerlo. </p>
             <div class="card-body">
               <h5 class="card-title"> Correspondencia escolar.</h5>
               <p class="card-text">
-                Es muy importante que no descuidamos esta parte y sigamos el proceso de forma adecuada para solicitar el préstamos o devolución. Si alguien tiene dudas sobre este proceso o no lo tiene claro, mándenme hang para que lo podamos revisar y resolver dudas. 
+                Correspondencia escolar.
+                Es muy importante que no descuidemos esta parte y sigamos el proceso de forma adecuada para solicitar el préstamos o devolución. Si alguien tiene dudas sobre este proceso o no lo tiene claro, mándenme hang para que lo podamos revisar y resolver dudas.
+
               </p>
             </div>
           </div>
