--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -14,7 +14,7 @@
           <div class="col"><li class="li activo" id="menuCertificacion">Certificación</li></div>
           <div class="col"><li class="li noactivo" id="menuTitulacion">Titulación</li></div>
           <div class="col"><li class="li noactivo" id="menuTitulacionLatam">Titulación LATAM</li></div>
-          <div class="col"><li class="li noactivo" id="menuTituloInt">Diploma intermedio</li></div>
+          <div class="col"><li class="li noactivo" id="menuTituloInt">Representación Grafica</li></div>
           <div class="col"><li class="li noactivo" id="menuCertificadoPar">Certificado parcial</li></div>
           </div>
       </ul>
@@ -102,12 +102,7 @@
             <div class="card-body">
 
               <p class="card-text">
-                Para el proceso de convalidación ante el Ministerio de Educación en Ecuador a partir de este año 2023,
-                  sólo será necesario el Título Apostillado y el CPA de acuerdo a la clasificación UNESCO, ambos documentos
-                  los realiza SER en el proceso de Certificación-Titulación, se comparte lo anterior para conocimiento y 
-                  orientación adecuada a nuestros egresados ecuatorianos.
-
-
+                Para el proceso de convalidación ante el Ministerio de Educación en Ecuador a partir de este año 2023, sólo será necesario el Título Apostillado y el CPA de acuerdo con la clasificación UNESCO, ambos documentos los realiza SER en el proceso de Certificación-Titulación, se comparte lo anterior para conocimiento y orientación adecuada a nuestros egresados ecuatorianos.
               </p>
             </div>
           </div>
@@ -371,16 +366,16 @@
                 <h5 class="card-title" >El proceso consta de:</h5> </br>
                 <p class="card-text">
                                             
-                  1.-Certificado electrónico: tarda aproximadamente de 2 a 3 meses en obtenerse   autenticado.
+                  1.-Certificado electrónico: tarda aproximadamente de 2 meses en obtenerse   autenticado.
                 </br></br>
                   2.-Expedición de constancia de título electrónico: la gestión de la constancia de título electrónico tarda un tiempo 
-                  aproximado de 8 a 10  semanas.
+                  aproximado 4 meses.
                 </br></br>
                   3.-Apostilla de título digital: el proceso demora de 60 a 90 días hábiles , siempre y cuando el pago esté reflejado en 
                   sistema
                 </br></br>
-                  4.-Expedición de título honorífico( documento físico simbólico): Tarda un tiempo aproximado de 3 meses y  va firmado por 
-                  el Rector y el Director de Servicios Escolares.
+                  4.-Expedición de representación grafica (documento físico simbólico): Tarda un tiempo aproximado 2 meses y va firmado por 
+                  el Rector.
                 </br></br>
                   5.-Certificado de programa académico: Documento Institucional que se emite para nuestros egresados extranjeros interesado 
                   en realizar el trámite de Convalidación en su país de origen, que hayan acreditado el 100% de los créditos del plan de estudios de Licenciatura o Maestría y cuenten con su título y certificado de estudios UTEL.
@@ -393,7 +388,7 @@
                     completa, tener pago de titulación. El inicio del proceso depende de la fecha en que finalizó sus materias y de la 
                     fecha de egreso.
                   </br></br> 
-                    Si va a realizar trámite de convalidación en su país deberá pagar la apostilla del título digital , si es que no están 
+                    Si va a realizar trámite de convalidación en su país deberá pagar la apostilla del título digital, si es que no están 
                     incluidos en el pago de titulación , así como el envío internacional.
                     
                   </b>
@@ -406,104 +401,147 @@
           <div class="procesoTitNacional row" id="procesotitnacional">                        
           </div>
         </div>
-        <!--Diploma intermedio-->
+
+        <!--Representación grafica-->
         <div class="bloque noactivo m-0" id="bloqueTituloInt">
           
-          <div class="TituloYTexto" id="3">
+          <div class="TituloYTexto" id="rg">
 
           </div>
 
           <div class="card mb-3 card mb-3 border-0" style="max-width: 100%;">
+            <!--Diploma auxiliar-->
             <div class="row g-0">
               
-              <div class="col-md-8">
+              <div class="col-md-12">
                 <div class="card-body">
-                  <h5 class="card-title">Se deberán cubrir los siguientes requisitos:</h5></br></br>
+                  <h5 class="card-title">Se deberán cubrir los siguientes requisitos:</h5>
                   <p class="card-text">
-                    -Tener estatus de matriculado </br>
-                    -No tener adeudos.</br>
-                    -Haber cursado como mínimo, un año calendario como estudiante UTEL.</br>
-                    -Haber aprobado las primeras 12 asignaturas del plan de estudio para el primer Título Intermedio
-                    y las 12 subsecuentes para el segundo. </br>
-                    -Documentación física completa </br>
-                    -Pago del documento. </br></br>
-                    Especificaciones de fotografía para el título Diploma: </br>
+                    -Tener documentos digitales generados </br>
+                    -No contar con saldos pendientes</br>
+
                 </div>
-              
-                  <img src="img/Fotos.jpg" class="py-2 img-fluid rounded-start" style="height: 35%;">
-                
               </div>
-              <div class="col-md-4">
-                <button class="col btn botonejemdoc btntit" type="button" data-bs-toggle="offcanvas" data-bs-target="#ejemplo-tit-int" aria-controls="offcanvasBottom"><img style=" max-height: 400px;"src="img/titulacion/titulo-intermedio1.png"></i></button>
 
-                <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ejemplo-tit-int" aria-labelledby="offcanvasBottomLabel">
-                <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasBottomLabeltitint">Titulo intermedio</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              <div class="row">
+                <div class="col col-md-6">
+                  <img src="img/titulacion/rg.png" alt="">
                 </div>
-                <div class="container card border border-0">
-  
-                  <div class="row row-cols-1 row-cols-xl-2 row-cols-md-2">
+              </div>
 
-                    <div class="col">
-  
-  
-                      <div id="carouseltitinter" class="carousel carousel-ejemplo slide">
-                        <div class="carousel-inner carousel-inner-ejemplo">
-                          <div class="carousel-item active">
-                            <img src="img/titulacion/titulo-intermedio1.png" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/titulacion/titulo-intermedio2.png" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                          <div class="carousel-item">
-                            <img src="img/titulacion/titulo-intermedio3.png" class="imagenes_ejemplo d-block w-100" alt="...">
-                          </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouseltitinter" data-bs-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouseltitinter" data-bs-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="visually-hidden">Next</span>
-                        </button>
-                      </div>
-                      
-                    </div>
+              <h5>
+                Criterios para revolución de documentos.
+              </h5>
+              <div class="row row row-cols-1 row-cols-xl-4 row-cols-md-2 g-4 my-1">
+
+                <!--Dividir col y card en div-->
+
+                <script>
+
+                  
+
+                  function copiarAlPortapapeles(id_elemento) {                     
+                    var aux = document.createElement("input");
+                    aux.setAttribute("value", document.getElementById(id_elemento).innerHTML);
+                    document.body.appendChild(aux);
+                    aux.select();
+                    document.execCommand("copy");
+                    document.body.removeChild(aux);
+                  }
+                  
+                </script>
+                <!--
+                <div class="col card border-0 h-100" >
+                  <div class="card-body">
+                    <h5 class="card-title">México</h5>
+                    <p class="card-text" id="direcMex">
+                      Calle y número: <br/>
+                      Colonia:<br/>
+                      Municipio o alcaldía:<br/>
+                      Estado:<br/>
+                      Código Postal:<br/>
+                      Referencia del domicilio:<br/>
+                      Teléfono:<br/>
+                      Correo:<br/>
+                      Persona autorizada para recibir:<br/>
+                      Ubicación de google maps del domicilio:<br/>
+                    </p>
                     
-                    <div class="col card border border-0">
-  
-                      <strong class="py-3 px-3"> Caracteristicas del titulo intermedio</strong>
-                      <a>
-
-                        Documento con valor curricular otorgado por la Universidad, que avala las habilidades adquiridas durante el primer y segundo 
-                        año de licenciatura, según corresponda. Para obtenerlo debes tener tu expediente físico completo y fotografías tamaño título. </br></br>
-                        
-                        *Estos Títulos son adicionales y no reemplazan al Título Profesional de Licenciatura. </br></br>
-                        *Nota: La información que se encuentra actualmente en tu SIU es la misma que se plasmará en tu documento solicitado. Revisa que esté correcta ya que no habrá cambios.
-                      </a>
-
-                      
-  
-                    </div>
-                  </div>  
+                    <button class="Botonmanual py-3 text-center border-0" onclick="copiarAlPortapapeles('direcMex')">Copiar</button>
+                  </div>
                 </div>
-                </div> 
-              </div>
-              
+
+                <div class="col card border-0 h-100" >
+                  <div class="card-body">
+                    <h5 class="card-title">Perú</h5>
+                    <p class="card-text">
+                      <b>Nombre de la calle y número:</b> <br/>
+                      <b>Distrito:</b><br/>
+                      <b>Provincia:</b><br/>
+                      <b>Departamento:</b><br/>
+                      <b>Código Postal:</b><br/>
+                      <b>Referencia del domicilio:</b><br/>
+                      <b>Teléfono:</b><br/>
+                      <b>Correo:</b><br/>
+                      <b>Persona autorizada para recibir:</b><br/>
+                      <b>Ubicación de google maps del domicilio:</b><br/>
+                      
+                      <a href="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Copiar</a></br>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col card border-0 h-100" >
+                  <div class="card-body">
+                    <h5 class="card-title">Ecuador</h5>
+                    <p class="card-text">
+                      <b>Nombre de la calle y número:</b> <br/>
+                      <b>Parroquia:</b><br/>
+                      <b>Cantón:</b><br/>
+                      <b>Provincia:</b><br/>
+                      <b>Código Postal:</b><br/>
+                      <b>Referencia del domicilio:</b><br/>
+                      <b>Teléfono:</b><br/>
+                      <b>Correo:</b><br/>
+                      <b>Persona autorizada para recibir:</b><br/>
+                      <b>Ubicación de google maps del domicilio:</b><br/>
+                      
+                      <a href="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Copiar</a></br>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col card border-0 h-100" >
+                  <div class="card-body">
+                    <h5 class="card-title">Colombia</h5>
+                    <p class="card-text">
+                      <b>Clase de vía (Calle, Carrera, Diagonal, Transversal, Avenida), Número de vía, Vía Adicional y número de casa:</b> <br/>
+                      <b>Municipio:</b><br/>
+                      <b>Departamento:</b><br/>
+                      <b>Distrito:</b><br/>
+                      <b>Código Postal:</b><br/>
+                      <b>Referencia del domicilio:</b><br/>
+                      <b>Teléfono:</b><br/>
+                      <b>Correo:</b><br/>
+                      <b>Persona autorizada para recibir:</b><br/>
+                      <b>Ubicación de google maps del domicilio:</b><br/>
+                      
+                      <a href="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Copiar</a></br>
+                    </p>
+                  </div>
+                </div>
+                -->
+                
+              </div> 
             </div>
+
           </div>
 
           
         </div>
+        
         <!--Certificado parcial-->
         <div class="bloque noactivo m-0" id="boqueCertificadoPar">
-          <div class="TituloYTexto" id="3">
-
-          </div>
-          
-  
           <div class="row row-cols-1 row-cols-xl-1 row-cols-md-1 g-4 my-1">
               <div class="col">
               <div class="card border-0 mb-3" >
@@ -514,9 +552,9 @@
                         <h5 class="card-title text-center">Certificado parcial</h5>
                         <p class="card-text">     
                           
-                          Documento que se proporciona al estudiante , con el cual puede comprobar el avance curricular cursado al momento , 
-                          emitido por la SEP .El proceso de certificación demora de 1 a 3 meses y el documento se comparte en digital en archivo pdf 
-                          y xml </br></br>
+                          Documento que se proporciona al estudiante, con el cual puede comprobar el avance curricular cursado al momento, 
+                          emitido por la SEP. El proceso de certificación demora de 1 a 3 meses y el documento se comparte en digital en 
+                          archivo pdf y xml.</br></br>
       
                           Se deberán cubrir los siguientes requisitos:</br>
                           -No tener adeudos </br>
@@ -529,7 +567,7 @@
                     </div>
 
                     <div class="col-md-4">
-                      <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style=" max-width: 300px;"src="img/titulacion/cerpar1.png"></i></button>
+                      <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom4" aria-controls="offcanvasBottom"><img style=" max-width: 300px;"src="img/titulacion/cerpar1.png"></button>
 
                       <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom4" aria-labelledby="offcanvasBottomLabel">
                       <div class="offcanvas-header">
@@ -553,7 +591,7 @@
                             autenticado por la Secretaría de Educación Pública. </br></br>
 
                             Para obtener un certificado parcial debes tener cursado mÍnimo un cuatrimestre de la Licenciatura y tu expediente 
-                            físico completo.
+                            digital completo.
                             
                           </div>
                         </div>   
