--- a/src/views/mapa.hbs
+++ b/src/views/mapa.hbs
@@ -10,10 +10,10 @@
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(2)">Servicio social</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(3)">Servicios escolares</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(4)">Recolección de documentos</a>
-          <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(5)">Apostilla</a>
+          <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(5)">Convalidación</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(6)">Directorio</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(7)">Manuales</a>
-          <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(8)">Preguntas frecuentes</a>
+          <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(8)">Dudas</a>
         </div>
 
       </div>
@@ -22,15 +22,29 @@
 
         <div class="tramites">
 
+        <script>
+          
+        </script>
+
         <!--Titulación-->
         <div class="py-2" style="display: none;" id="titulacion">
           <img src="Img/Titulacion_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center py-0">Titulación</h5>
-          <a  href="titulacion#bloqueCertificacion" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(1)">Certificación</a>
-          <a  href="titulacion#boqueTitulacion" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(2)">Titulación</a>
-          <a  href="titulacion#bloqueTitulacionLatam" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(3)">Titulación LATAM</a>
-          <a  href="titulacion#bloqueTituloInt" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(4)">Titulo intermedio</a>
-          <a  href="titulacion#boqueCertificadoPar" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(5)">Certificado parcial</a>
+          <a  href="titulacion#bloqueCertificacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botoncerti">Certificación</a>
+          <a  href="titulacion#boqueTitulacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitu">Titulación</a>
+          <a  href="titulacion#bloqueTitulacionLatam" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitulatam">Titulación LATAM</a>
+          <a  href="titulacion#bloqueTituloInt" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitinter">Titulo intermedio</a>
+          <a  href="titulacion#boqueCertificadoPar" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botoncertpar">Certificado parcial</a>
+        </div>
+
+        <!--Convalidación-->
+        <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="apostilla">
+          <img src="Img/Apostilla_img.png" class="imagenes_mapa" alt="...">
+          <h5 class="card-title text-center">Convalidación</h5>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Apostilla</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Convalidación</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Doble reconocimiento</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >CPA</a>
         </div>
 
         <!--Servicio social-->
@@ -52,7 +66,7 @@
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Tipos de ingreso</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Tramites que realiza escolares</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Costos en plataforma</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Preguntas frecuentes</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Diplomados</a>
         </div>
 
         <!--Recoleción de documentos-->
@@ -67,26 +81,13 @@
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Procesos</a>
         </div>
 
-        <!--Apostilla-->
-        <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="apostilla">
-          <img src="Img/Apostilla_img.png" class="imagenes_mapa" alt="...">
-          <h5 class="card-title text-center">Recoleción de documentos</h5>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Apostilla</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Convalidación</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Doble reconocimiento</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Procesos</a>
-        </div>
-
         <!--Directorio-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="directorio">
           <img src="Img/Directorio_img.png" class="imagenes_mapa" alt="...">
-          <h5 class="card-title text-center">Recoleción de documentos</h5>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentación UTEL</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >¿Como validar documentos nacionales?</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >¿Como validar documentos LATAM?</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Legalización</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Archivo</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Procesos</a>
+          <h5 class="card-title text-center">Directorio</h5>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Busqueda</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Departamentos</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Glosario</a>
         </div>
 
         <!--Manuales-->
@@ -101,10 +102,10 @@
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Procesos</a>
         </div>
 
-        <!--Preguntas frecuentes-->
+        <!--Dudas-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="preguntfrec">
           <img src="Img/Preguntas_img.png" class="imagenes_mapa" alt="...">
-          <h5 class="card-title text-center">Recoleción de documentos</h5>
+          <h5 class="card-title text-center">Dudas</h5>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Titulación</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Servicio social</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Control documental</a>
@@ -114,6 +115,5 @@
       </div>
 
       </div>
-
     </div>
   </div> 
