--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -46,8 +46,8 @@
 
             </a>
 
-
           </div>
+
           <div class="border-3 card card-importante mx-3 mb-5">
             <div class="card-body">
               <strong class="">Importante</strong>
@@ -55,15 +55,12 @@
               <p class="card-text">
                 La documentación solo se solicita de forma digital, sin embargo, hay alumnos que aún cuentan con
                 expediente físico dentro de las instalaciones en Naucalpan ya que con anterioridad así se manejaba.
-
-
               </p>
             </div>
           </div>
 
           <div>
             <div class="accordion" id="accordionPanelsStayOpenExample">
-
               <div class="">
                 <!--Documentos mexicanos-->
                 <div class="accordion-item">
@@ -81,7 +78,7 @@
                         <div class="col">
 
                           <strong>Documentación para licencitura:</strong> </br></br>
-                          -Curp</br>
+                          -CURP</br>
                           -Carta poder (en caso de equivalencia)</br>
                           -Certificado parcial Licenciatura (en caso de equivalencia)</br>
                           -Acta de nacimiento</br>
@@ -126,12 +123,12 @@
                         <div class="col">
                           <strong>Manuales de validación</strong></br>
                           <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_curp.pdf" target="_blank">¿Como validar un
-                            Curp?</a>
+                            CURP?</a>
                           <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_acta.pdf" target="_blank">¿Como
                             validar un acta de nacimiento?</a>
                           <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_certificado.pdf" target="_blank">¿Como
                             validar un certificado?</a>
-                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_cedula.pdf" target="_blank">¿Como
+                          <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_titulo.pdf" target="_blank">¿Como
                             validar un titulo?</a>
                           <a class="Botonmanual row py-3 px-3" href="docs/manualesdoc/Mexico/validar_cedula.pdf" target="_blank">¿Como
                             validar un cédula?</a>
@@ -203,6 +200,7 @@
                             <h2 class="text-center">Documentos Colombia</h2>
                             <div class="row">
                               <div class="col">
+                                
 
                                 <strong>Documentación para licencitura:</strong> </br></br>
                                 -Antecentes academicos bachillerato</br>
@@ -267,6 +265,63 @@
                           aria-labelledby="panelsStayOpen-headingDocumentosPeru">
                           <div class="accordion-body">
                             <h2 class="text-center">Documentos Perú</h2>
+                            <div class="row">
+                              <div class="col">
+
+                                <strong>Documentación para licencitura:</strong> </br></br>
+                                -Antecentes academicos bachillerato</br>
+                                -Carta compromiso</br>
+                                -Comprobante de domicilio</br>
+                                -Identificación</br></br>
+
+                                <strong>Documentación para Maestría:</strong> </br></br>
+
+                                -Antecentes academicos licenciatura</br>
+                                -Carta compromiso</br>
+                                -Comprobante de domicilio</br>
+                                -Identificación</br></br>
+
+                                <strong>Documentación para Doctorado:</strong> </br></br>
+                                -</br>
+                                -</br>
+                                -</br>
+                                - </br></br>
+
+                              </div>
+
+                              <div class="col">
+                                <strong>Manuales de validación</strong></br>
+                                <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Como
+                                  validar un certificado de licenciatura?</a>
+                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
+                                  target="_blank">¿Como validar un certificado de bachillerato?</a>
+                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
+                                  target="_blank">¿Como validar una carta compromiso?</a>
+                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
+                                  target="_blank">¿Como validar un comprobante de domicilio</a>
+                                <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf"
+                                  target="_blank">¿Como validar una identificación</a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                      <!---Colombia--->
+                      <div class="accordion-item">
+                        <!--Botón-->
+                        <h2 class="accordion-header" id="panelsStayOpen-headingDocumentosPeru">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseDocumentosPeru" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseDocumentosPeru">
+                            Documentos Colombia
+                          </button>
+                        </h2>
+                        <!--Contenido-->
+                        <div id="panelsStayOpen-collapseDocumentosPeru" class="accordion-collapse collapse"
+                          aria-labelledby="panelsStayOpen-headingDocumentosPeru">
+                          <div class="accordion-body">
+                            <h2 class="text-center">Documentos Colombia</h2>
                             <div class="row">
                               <div class="col">
 
@@ -649,7 +704,7 @@
                         <div class="col">
 
                           <strong>Documentación para Diplomados:</strong> </br></br>
-                          -Curp</br>
+                          -CURP</br>
                           -Acta de nacimiento</br>
                           -Carta compromiso y anexo de datos y costos</br>
                           -Antecentes academicos</br>
@@ -660,7 +715,7 @@
                         <div class="col">
                           <strong>Manuales de validación</strong></br>
                           <a class="Botonmanual row py-3 px-3" href="Validar_curp.pdf" target="_blank">¿Como validar un
-                            Curp?</a>
+                            CURP?</a>
                           <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
                             validar un acta de nacimiento?</a>
                           <a class="Botonmanual row py-3 px-3" href="Manual-tit-nacional.pdf" target="_blank">¿Como
@@ -681,11 +736,18 @@
                 </div>
 
               </div>
-
             </div>
-
           </div>
+          
+          <div>
+            <div class="card border-0 py-3 px-3" >
 
+              <div class="framedoc m-5">
+              <iframe src="docs/doc/tablacorrespondencia.pdf" width="100%" height="680px"></iframe>
+
+              </div>
+            </div>
+          </div>
         </div>
 
         <!--Tipos de ingreso-->
@@ -693,7 +755,7 @@
           <div class="border border-0 card mt-1">
 
             <div class="card border-0 py-3 px-3">
-              <h4><b>¿Que son los tipos de ingreso?</b></h4></br>
+              <h4><b>¿Qué son los tipos de ingreso?</b></h4></br>
 
               <a>
                 Para ingresar a cursar un grado académico dentro de UTEL es necesario determinar el tipo de ingreso al
@@ -715,7 +777,12 @@
                       <div class="card-body">
                         <h5 class="card-title text-center">Equivalencia</h5>
                         <p class="card-text">
-                          Trámite ante SEP para equiparar estudios realizados en el sistema educativo nacional.
+                          Es un documento expedido de una modalidad educativa a otra, en el que se declaran equiparables entre sí los estudios realizados dentro del Sistema 
+                          Educativo Nacional (SEN), es decir, si un alumno ha acreditado estudios dentro del SEN y por algún motivo desea continuar con el mismo plan o programa 
+                          en otra institución educativa oficial o particular perteneciente a dicho sistema educativo, deberá tramitar la equivalencia de estudios correspondiente. 
+                          <br/>
+                          Se trata de un proceso 100% administrativo que puede realizar la propia institución, también puede ser realizado por el alumno, acudiendo personalmente 
+                          ante la Dirección General de Educación Superior Universitaria de la Secretaría de Educación Pública (SEP).
                         </p>
 
                       </div>
@@ -736,20 +803,20 @@
                                   <h5 class="text-center">Documentación de equivalencia</h5>
 
 
-                                  -Certificado de Bachillerato (Legalizado) por ambos lados
+                                  • Certificado de Bachillerato (Legalizado) por ambos lados
                                   </br>
-                                  -Identificación Oficial (IFE por ambos lados o Pasaporte)
+                                  • Identificación Oficial (IFE por ambos lados o Pasaporte)
                                   </br>
-                                  -CURP
+                                  • CURP
                                   </br>
-                                  -Comprobante de Domicilio (Teléfono fijo, Agua, Luz o Gas natural)
+                                  • Comprobante de Domicilio (Teléfono fijo, Agua, Luz o Gas natural)
                                   </br>
-                                  -Carta de cesión de derechos con firma autógrafa (revisa formato ejemplo de llenado)
+                                  • Carta de cesión de derechos con firma autógrafa (revisa formato ejemplo de llenado)
                                   Predictamen con firma de aceptación
                                   </br>
-                                  -Realiza el pago de derechos
+                                  • Realiza el pago de derechos
                                   </br>
-                                  -Certificado parcial o total de estudios a equivaler (legalizado)
+                                  • Certificado parcial o total de estudios a equivaler (legalizado)
 
                                 </div>
                               </div>
@@ -812,22 +879,22 @@
                                 aria-labelledby="panelsStayOpen-heading2">
                                 <div class="accordion-body">
                                   <div class="container rounded-3 my-3 py-3 bg-white">
-                                    <h5 class="text-center">Documentación de equivalencia</h5>
+                                    <h5 class="text-center">Documentación de revalidación</h5>
 
-                                    -Certificado de Bachillerato (Legalizado) por ambos lados
+                                    • Certificado de Bachillerato (Legalizado) por ambos lados
                                     </br>
-                                    -Identificación Oficial (IFE por ambos lados o Pasaporte)
+                                    • Identificación Oficial (IFE por ambos lados o Pasaporte)
                                     </br>
-                                    -CURP
+                                    • CURP
                                     </br>
-                                    -Comprobante de Domicilio (Teléfono fijo, Agua, Luz o Gas natural)
+                                    • Comprobante de Domicilio (Teléfono fijo, Agua, Luz o Gas natural)
                                     </br>
-                                    -Carta de cesión de derechos con firma autógrafa (revisa formato ejemplo de llenado)
+                                    • Carta de cesión de derechos con firma autógrafa (revisa formato ejemplo de llenado)
                                     Predictamen con firma de aceptación
                                     </br>
-                                    -Realiza el pago de derechos
+                                    • Realiza el pago de derechos
                                     </br>
-                                    -Certificado parcial o total de estudios a equivaler (legalizado)
+                                    • Certificado parcial o total de estudios a equivaler (legalizado)
                                   </div>
                                 </div>
                               </div>
@@ -885,24 +952,20 @@
                                   aria-labelledby="panelsStayOpen-heading3">
                                   <div class="accordion-body">
                                     <div class="container rounded-3 my-3 py-3 bg-white">
-                                      <h5 class="text-center">Documentación de equivalencia</h5>
+                                      <h5 class="text-center">Documentación de dictamen tecnico</h5>                                      
 
-
-                                      -Certificado de Bachillerato (Legalizado) por ambos lados
+                                      • Formato Digital de Acta de Nacimiento o Documento que acredite la identidad del interesado
                                       </br>
-                                      -Identificación Oficial (IFE por ambos lados o Pasaporte)
+                                      • Formato digital de Certificado de Estudios/Diplomas/Constancias/Títulos o Grados Académicos
                                       </br>
-                                      -CURP
+                                      • Formato digital del comprobante de domicilio vigente (máximo tres meses).
                                       </br>
-                                      -Comprobante de Domicilio (Teléfono fijo, Agua, Luz o Gas natural)
+                                      • Formato digital de la Ficha de inscripción
                                       </br>
-                                      -Carta de cesión de derechos con firma autógrafa (revisa formato ejemplo de llenado)
-                                      Predictamen con firma de aceptación
+                                      • Formato digital de la Carta compromiso de ingreso. Los alumnos tienen un plazo de 4 meses para entregar los documentos originales o
+                                      copias certificadas.
                                       </br>
-                                      -Realiza el pago de derechos
-                                      </br>
-                                      -Certificado parcial o total de estudios a equivaler (legalizado)
-
+                                      • Formato digital del comprobante de pago.
                                     </div>
                                   </div>
                                 </div>
@@ -919,7 +982,7 @@
                     </div>
 
                     <div class="col-md-4">
-                      <img style="height: 300px" src="">
+                      <img style="height: 300px" src="Img/dictamen.png ">
                     </div>
 
 
@@ -942,7 +1005,7 @@
 
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title text-center">¿Que es la legalización?</h5>
+                      <h5 class="card-title text-center">¿Qué es la legalización?</h5>
                       <p class="card-text">
 
                         El trámite de Legalización de Firmas, consiste en certificar las Firmas de los Servidores
@@ -1012,7 +1075,6 @@
                         </li>
                       </ul>
                       </p>
-                      <h5 class="card-title text-center">¿EJEMPLO DE LEGALIZACIÓN? </h5>
                     </div>
 
                     <div class="border-3 card card-importante mx-3 mb-5">
@@ -1066,11 +1128,12 @@
                       </p>
 
                       <h5 class="card-title text-center">
-                      Responsables.
+                      Responsable.
                       </h5>
 
                       <p>
-
+                      Maricela García Rosales <br/>
+                      mgarciar@utel.edu.mx
                       </p>
 
                     </div>
@@ -1107,8 +1170,8 @@
 
                         <br /><br />
                         Con ambos requisitos cubiertos, se genera la solicitud por medio de Flokzu:
-                        https://app.flokzu.com/public/01bb9LARCH-PREST
                       </p>
+                      <a href="https://app.flokzu.com/public/01bb9LARCH-PREST" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Ir</a></br>
                     </div>
                   </div>
                   <div class="col-md-4">
@@ -1134,9 +1197,9 @@
                         carta poder para terceros
 
                         <br /><br />
-                        Se hace la solicitud por medio de Flokzu: https://app.flokzu.com/public/01bb9LARCH-PREST
-
+                        Se hace la solicitud por medio de Flokzu: 
                       </p>
+                      <a href="https://app.flokzu.com/public/01bb9LARCH-PREST" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Ir</a></br>
                     </div>
                   </div>
                   <div class="col-md-4">
@@ -1155,15 +1218,13 @@
                     <div class="card-body">
                       <h5 class="card-title text-center">¿Cómo se hace el escaneo?</h5>
                       <p class="card-text">
-                        Se hace la solicitud por medio de Flokzu: https://app.flokzu.com/public/01bb9LSCANDOC
-
+                        Se hace la solicitud por medio de Flokzu
                         <br /><br />
-
                         Una vez hecha la solicitud, el área de archivo responde la solicitud (aproximadamente en 48
                         horas) y se le envía el escaneo al correo del estudiante (es importante confirmar el correo del
                         estudiante).
                       </p>
-
+                      <a href="https://app.flokzu.com/public/01bb9LSCANDOC" class="Botonmanual row py-2 px-2 text-center justify-content-center" target="_blank">Ir</a></br>
                     </div>
                   </div>
 
