--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -432,7 +432,7 @@
   
   <h3 class="text-center">Responsables por Departamentos</h3>
 
-  <img class="d-block w-100" src="img/directorio/responsables.PNG" alt="">
+  <img class="d-block w-100" src="img/directorio/responsables.png" alt="">
 
 </div>
 
