--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -63,7 +63,7 @@
 
 
                       <div class="col-md-4">                        
-                        <img style="height: 300px" src="Img/equicalencia.png">
+                        <img style="height: 300px" src="Img/equivalencia.png">
                       </div>
                     
                       
@@ -177,7 +177,7 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Constancia_termino.PNG " class="card-img-top" alt="...">
+                <img src="Img/escolares/Constancia_termino.png " class="card-img-top" alt="...">
               </div>
 
               <!--Constancia de estudios-->
@@ -197,7 +197,7 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Constancia_estudios.PNG " class="card-img-top" alt="...">
+                <img src="Img/escolares/Constancia_estudios.png " class="card-img-top" alt="...">
               </div>
               
               <!--Carta pasante-->
@@ -215,7 +215,7 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Carta_Pasante.PNG " class="card-img-top" alt="...">
+                <img src="Img/escolares/Carta_Pasante.png " class="card-img-top" alt="...">
                 
               </div>
 
@@ -235,8 +235,8 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Avance_curricular.PNG " class="card-img-top" alt="...">
-                <img src="Img/escolares/Avance_curricular2.PNG " class="card-img-top" alt="...">
+                <img src="Img/escolares/Avance_curricular.png " class="card-img-top" alt="...">
+                <img src="Img/escolares/Avance_curricular2.png " class="card-img-top" alt="...">
               </div>
 
               <!--Credencial-->
@@ -254,7 +254,7 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Credencial.PNG " class="card-img-top" alt="...">
+                <img src="Img/escolares/Credencial.png " class="card-img-top" alt="...">
               </div>
 
               <!--Constancia inscripcion-->
@@ -270,8 +270,7 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Diploma_master.PNG " class="card-img-top" alt="...">
-                <img src="Img/escolares/Diploma_master2.PNG " class="card-img-top" alt="...">
+                <img src="Img/escolares/constinscrip.png " class="card-img-top" alt="...">
 
               </div>
 
@@ -288,8 +287,8 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Diploma_master.PNG " class="card-img-top" alt="...">
-                <img src="Img/escolares/Diploma_master2.PNG " class="card-img-top" alt="...">
+                <img src="Img/escolares/Diploma_master.png " class="card-img-top" alt="...">
+                <img src="Img/escolares/Diploma_master2.png " class="card-img-top" alt="...">
               </div>
               
             </div>
