--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -23,7 +23,7 @@
       
     </div>
     <div style="float: left;">
-      <a href="/users/logout"><img style="height: 40px;"src="img/Sesion.PNG"></a>
+      <a href="/users/logout"><img style="height: 40px;"src="img/Sesion.png"></a>
     </div>
   </div>
 
