--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -314,7 +314,7 @@
                       Lo primero que se tiene que identificar es si ya se realizó una unificación ante RENAPO, en caso de que no, brindarle 
                       instrucciones al alumno para realizar el proceso y obtener la CURP con la leyenda de curp unificado.<br/><br/>
   
-                    <img src="Img/Buscador/Curp_unificado.PNG" alt=""><br/><br/>
+                    <img src="Img/Buscador/Curp_unificado.png" alt=""><br/><br/>
                       En caso de que el alumno realice este trámite posterior a la titulación es necesario realizar la corrección de sus 
                       documentos ya que no podrá tramitar su Cédula en la plataforma de la SEPLo primero que se tiene que identificar es si ya 
                       se realizo 
