--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="carousel-item">
                                 Apostilla
-                                  <img src="Img/Titulacion/certi-apost2.PNG " class="d-block w-100" alt="...">
+                                  <img src="Img/Titulacion/certi-apost2.png " class="d-block w-100" alt="...">
                                 </div>
                               </div>
                               <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
@@ -154,7 +154,7 @@
                                 </div>
                                 <div class="carousel-item">
                                 Apostilla
-                                  <img src="Img/Titulacion/tit-apost2.PNG " class="d-block w-100" alt="...">
+                                  <img src="Img/Titulacion/tit-apost2.png " class="d-block w-100" alt="...">
                                 </div>
                               </div>
                               <button class="carousel-control-prev" type="button" data-bs-target="#carousel0" data-bs-slide="prev">
@@ -523,10 +523,10 @@
                   <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <div class="row row-cols-md-2">
-                          <img class="Col" src="Img/Titulacion/Doblerec1.PNG ">
-                          <img class="Col" src="Img/Titulacion/Doblerec2.PNG ">
-                          <img Class="Col "src="Img/Titulacion/Doblerec3.PNG ">
-                          <img Class="Col "src="Img/Titulacion/Doblerec4.PNG ">
+                          <img class="Col" src="Img/Titulacion/Doblerec1.png ">
+                          <img class="Col" src="Img/Titulacion/Doblerec2.png ">
+                          <img Class="Col "src="Img/Titulacion/Doblerec3.png ">
+                          <img Class="Col "src="Img/Titulacion/Doblerec4.png ">
                         </div>
                     </div>  
                   </div>
