--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -68,7 +68,7 @@
                                 </div>
                                 <div class="carousel-item">
                                 Apostilla
-                                  <img src="Img/Titulacion/certi-apost2.png " class="d-block w-100" alt="...">
+                                  <img src="Img/titulacion/certi-apost2.png " class="d-block w-100" alt="...">
                                 </div>
                               </div>
                               <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
@@ -523,10 +523,10 @@
                   <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <div class="row row-cols-md-2">
-                          <img class="Col" src="Img/Titulacion/Doblerec1.png ">
-                          <img class="Col" src="Img/Titulacion/Doblerec2.png ">
-                          <img Class="Col "src="Img/Titulacion/Doblerec3.png ">
-                          <img Class="Col "src="Img/Titulacion/Doblerec4.png ">
+                          <img class="Col" src="Img/titulacion/Doblerec1.png ">
+                          <img class="Col" src="Img/titulacion/Doblerec2.png ">
+                          <img Class="Col "src="Img/titulacion/Doblerec3.png ">
+                          <img Class="Col "src="Img/titulacion/Doblerec4.png ">
                         </div>
                     </div>  
                   </div>
@@ -552,7 +552,7 @@
             </a>
 
             <div class="framedoc m-5">
-            <iframe src="docs/doc/cpa.pdf" width="100%" height="680px"></iframe>
+            <iframe src="docs/doc/CPA.pdf" width="100%" height="680px"></iframe>
 
             </div>
         </div>
