--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -430,7 +430,7 @@
               </div>
 
               <h5>
-                Criterios para revolución de documentos.
+                Criterios para devolución de documentos.
               </h5>
               <div class="row row row-cols-1 row-cols-xl-4 row-cols-md-2 g-4 my-1">
 
