--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -828,7 +828,7 @@
 
                     <div class="col-md-4">
                       <h6>Mas sobre equivalencia</h6>
-                      <img style="height: 300px" src="Img/equicalencia.png">
+                      <img style="height: 300px" src="Img/equivalencia.png">
                     </div>
                   </div>
                 </div>
@@ -909,7 +909,7 @@
                     </div>
 
                     <div class="col-md-4">
-                      <img style="height: 300px" src="Img/revalidacion.png">
+                      <img style="height: 300px" src="img/revalidacion.png">
                     </div>
 
                   </div>
@@ -982,7 +982,7 @@
                     </div>
 
                     <div class="col-md-4">
-                      <img style="height: 300px" src="Img/dictamen.png ">
+                      <img style="height: 300px" src="img/dictamen.png ">
                     </div>
 
 
@@ -1090,7 +1090,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <img style="width:  300px" src="Img/Lega.png ">
+                    <img style="width:  300px" src="img/Lega.png ">
                   </div>
                 </div>
               </div>
@@ -1140,7 +1140,7 @@
                   </div>
 
                   <div class="col-md-4">
-                    <img style="width: 300px" src="Img/Lega.png ">
+                    <img style="width: 300px" src="img/Lega.png ">
                   </div>
                 </div>
               </div>
@@ -1175,7 +1175,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <img style="width:  300px" src="Img/Prestadoc.png ">
+                    <img style="width:  300px" src="img/Prestadoc.png ">
                   </div>
                 </div>
               </div>
@@ -1203,7 +1203,7 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <img style="width:  300px" src="Img/Devo.png ">
+                    <img style="width:  300px" src="img/Devo.png ">
                   </div>
                 </div>
               </div>
@@ -1229,7 +1229,7 @@
                   </div>
 
                   <div class="col-md-4">
-                    <img style="width:  300px" src="Img/Escaneo.png ">
+                    <img style="width:  300px" src="img/Escaneo.png ">
                   </div>
                 </div>
               </div>
