--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -828,7 +828,7 @@
 
                     <div class="col-md-4">
                       <h6>Mas sobre equivalencia</h6>
-                      <img style="height: 300px" src="Img/equivalencia.png">
+                      <img style="height: 300px" src="img/equivalencia.png">
                     </div>
                   </div>
                 </div>
