--- a/src/views/servicioses.hbs
+++ b/src/views/servicioses.hbs
@@ -63,7 +63,7 @@
 
 
                       <div class="col-md-4">                        
-                        <img style="height: 300px" src="Img/equivalencia.png">
+                        <img style="height: 300px" src="img/equivalencia.png">
                       </div>
                     
                       
@@ -102,7 +102,7 @@
                       </div>
 
                       <div class="col-md-4">
-                        <img style="height: 300px" src="Img/revalidacion.png">
+                        <img style="height: 300px" src="img/revalidacion.png">
                       </div>
                     
                     </div>
@@ -138,7 +138,7 @@
                       </div>
 
                       <div class="col-md-4">
-                        <img style="height: 300px" src="Img/dictamen.png ">
+                        <img style="height: 300px" src="img/dictamen.png ">
                       </div>
                     
                       
@@ -177,7 +177,7 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Constancia_termino.png " class="card-img-top" alt="...">
+                <img src="img/escolares/Constancia_termino.png " class="card-img-top" alt="...">
               </div>
 
               <!--Constancia de estudios-->
@@ -197,7 +197,7 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Constancia_estudios.png " class="card-img-top" alt="...">
+                <img src="img/escolares/Constancia_estudios.png " class="card-img-top" alt="...">
               </div>
               
               <!--Carta pasante-->
@@ -215,7 +215,7 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Carta_Pasante.png " class="card-img-top" alt="...">
+                <img src="img/escolares/Carta_Pasante.png " class="card-img-top" alt="...">
                 
               </div>
 
@@ -235,8 +235,8 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Avance_curricular.png " class="card-img-top" alt="...">
-                <img src="Img/escolares/Avance_curricular2.png " class="card-img-top" alt="...">
+                <img src="img/escolares/Avance_curricular.png " class="card-img-top" alt="...">
+                <img src="img/escolares/Avance_curricular2.png " class="card-img-top" alt="...">
               </div>
 
               <!--Credencial-->
@@ -254,7 +254,7 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Credencial.png " class="card-img-top" alt="...">
+                <img src="img/escolares/Credencial.png " class="card-img-top" alt="...">
               </div>
 
               <!--Constancia inscripcion-->
@@ -270,7 +270,7 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/constinscrip.png " class="card-img-top" alt="...">
+                <img src="img/escolares/constinscrip.png " class="card-img-top" alt="...">
 
               </div>
 
@@ -287,8 +287,8 @@
                   
                   </p>
                 </div>
-                <img src="Img/escolares/Diploma_master.png " class="card-img-top" alt="...">
-                <img src="Img/escolares/Diploma_master2.png " class="card-img-top" alt="...">
+                <img src="img/escolares/Diploma_master.png " class="card-img-top" alt="...">
+                <img src="img/escolares/Diploma_master2.png " class="card-img-top" alt="...">
               </div>
               
             </div>
@@ -334,7 +334,7 @@
               <!--UTEL HIGER-->
               <div class="card border-0 mb-3 py-2 doc activo" style="display: block;" id="UtelHCostos">
                 
-                <img class="mx-auto d-block" src="Img/escolares/Costos/Costos_mexico.png">
+                <img class="mx-auto d-block" src="img/escolares/Costos/Costos_mexico.png">
                 
               </div> 
 
@@ -348,98 +348,98 @@
                     <p class="text-center">Precios Perú</p>
                     
                     <a href="docs/precios/PreciosPERU.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"><img  style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"><img  style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center ">Precios Paraguay</p>
                     <a href="docs/precios/PreciosPARAGUAY.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center ">Precios Uruguay</p>
                     <a href="docs/precios/PreciosURUGUAY.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center">Precios Internacional</p>
                     <a href="docs/precios/PreciosINTERNACIONAL.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center">Precios Bolivia</p>
                     <a href="docs/precios/PreciosBOLIVIA.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center">Precios USA</p>
                     <a href="docs/precios/PreciosUSA.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center">Precios Panamá</p>
                     <a href="docs/precios/PreciosPANAMA.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center">Precios Guatemala</p>
                     <a href="docs/precios/PreciosGUATEMALA.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center">Precios España</p>
                     <a href="docs/precios/PreciosESPANA.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center">Precios El Salvador</p>
                     <a href="docs/precios/PreciosSALVADOR.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
       
                   <Div class="col">
                     <p class="text-center">Precios Ecuador</p>
                     <a href="docs/precios/PreciosECUADOR.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center">Precios Republica Dominicana</p>
                     <a href="docs/precios/PreciosDOMINICANA.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center">Precios Colombia</p>
                     <a href="docs/precios/PreciosCOLOMBIA.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
                   <Div class="col">
                     <p class="text-center">Precios Chile</p>
                     <a href="docs/precios/PreciosCHILE.pdf" target="_blank">
-                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="Img/escolares/Costos/Costos_peru.png "></button>
+                    <button class="btn botonejemdoc mx-auto d-block p-0" type="button"  ><img style="height: 200px"src="img/escolares/Costos/Costos_peru.png "></button>
                     </a>
                   </Div>
 
